MDEV-38702 Behaviour of IF() with boolean JSON_EXTRACT as expression is wrong

implement Item_func_json_extract::val_bool()